--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
 
   release:
     environment:
-      name: production
+      name: workshop
       url: https://github.com/${{ github.repository }}/releases/tag/v${{ steps.release.outputs.version }}
     name: Semantic release
     needs:
