--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,8 +124,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
           GIT_AUTHOR_NAME: ${{ github.event.commits[0].author.username }}
           GIT_AUTHOR_EMAIL: ${{ github.event.commits[0].author.email }}
-          GIT_COMMITTER_NAME: ${{ secrets.GIT_COMMITTER_NAME }}
-          GIT_COMMITTER_EMAIL: ${{ secrets.GIT_COMMITTER_EMAIL }}
+          GIT_COMMITTER_NAME: bdougie
+          GIT_COMMITTER_EMAIL: bdougie@github.com
         run: |
           cp -R /tmp/build ./build
           npx semantic-release
