--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   docker:
@@ -151,14 +152,12 @@ jobs:
         run: |
           cp -R /home/runner/build .
           ls -lahH ./build
-
+          
       - name: "🚀 deploy static"
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
-          commit_message: ${{ github.event.head_commit.message }}
-          enable_jekyll: false
+          branch: gh-pages # The branch the action should deploy to.
+          folder: ./build # The folder the action should deploy.
 
   cleanup:
     name: Cleanup actions
